Add Message System
* Update dependencies and generate messages module

* Merge main and define entitites

* Add message DTOs

* Revert to old version of eslint to remove error

* Add message service methods

* Add message endpoints

* Refactor Chats to reduce code duplication

* Add message.service tests

* Add message e2e tests

* Update frontend to include new features

* Fix getOrCreateChat not initializing messages

* Update README.md
