# server/src/messages/entities/message-type.enum.ts
@@ -1,0 +1,6 @@
+export enum MessageType {
+  TEXT = 'TEXT',
+  IMAGE = 'IMAGE',
+  VIDEO = 'VIDEO',
+  AUDIO = 'AUDIO',
+}
